--- a/redux_KanBan/package.json
+++ b/redux_KanBan/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "mongoose": "^8.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
