--- a/redux_KanBan/api/package.json
+++ b/redux_KanBan/api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.2.3",
