--- a/redux_KanBan/package.json
+++ b/redux_KanBan/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.13.0",
